tests/scripts/type_errors/overriding_builtin.roto
type u32 { b: u32 }

function foo() {}
